--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@
 # all files needed for a release build.
 
 # Increase trace logging, see debhelper(7) (uncomment to enable)
-#DH_VERBOSE=1
+DH_VERBOSE=1
 
 export DH_VIRTUALENV_INSTALL_ROOT=/opt/venvs
 SNAKE=/usr/bin/python3
